cmake_minimum_required(VERSION 3.8)
project(ParallelProgramming)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Assigment0/mpi_vect_mult/mpi_mat_vect_mult.c
        Assigment0/mpi_vect_mult/mpi_vect_mult.c
        ipp-source-use/ch2/histogram.c
        ipp-source-use/ch3/bubble.c
        ipp-source-use/ch3/mat_vect_mult.c
        ipp-source-use/ch3/mpi_hello.c
        ipp-source-use/ch3/mpi_many_msgs.c
        Assigment0/mpi_vect_mult/mpi_mat_vect_mult.c
        ipp-source-use/ch3/mpi_mat_vect_time.c
        ipp-source-use/ch3/mpi_odd_even.c
        ipp-source-use/ch3/mpi_output.c
        ipp-source-use/ch3/mpi_trap1.c
        ipp-source-use/ch3/mpi_trap2.c
        ipp-source-use/ch3/mpi_trap3.c
        ipp-source-use/ch3/mpi_trap4.c
        ipp-source-use/ch3/mpi_vector_add.c
        ipp-source-use/ch3/odd_even.c
        ipp-source-use/ch3/timer.h
        ipp-source-use/ch3/trap.c
        ipp-source-use/ch3/vector_add.c
        ipp-source-use/ch4/linked_list.c
        ipp-source-use/ch4/mat_vect_mult.c
        ipp-source-use/ch4/my_rand.c
        ipp-source-use/ch4/my_rand.h
        ipp-source-use/ch4/pth_busy_bar.c
        ipp-source-use/ch4/pth_cond_bar.c
        ipp-source-use/ch4/pth_do_nothing.c
        ipp-source-use/ch4/pth_hello.c
        ipp-source-use/ch4/pth_ll_mult_mut.c
        ipp-source-use/ch4/pth_ll_one_mut.c
        ipp-source-use/ch4/pth_ll_rwl.c
        ipp-source-use/ch4/pth_mat_vect.c
        ipp-source-use/ch4/pth_mat_vect_rand_split.c
        ipp-source-use/ch4/pth_msg.c
        ipp-source-use/ch4/pth_msg_sem.c
        ipp-source-use/ch4/pth_msg_sem_mac.c
        ipp-source-use/ch4/pth_pi.c
        ipp-source-use/ch4/pth_pi_busy1.c
        ipp-source-use/ch4/pth_pi_busy2.c
        ipp-source-use/ch4/pth_pi_mutex.c
        ipp-source-use/ch4/pth_sem_bar.c
        ipp-source-use/ch4/pth_tokenize.c
        ipp-source-use/ch4/pth_tokenize_r.c
        ipp-source-use/ch4/timer.h
        ipp-source-use/ch5/omp_msg/omp_msglk.c
        ipp-source-use/ch5/omp_msg/omp_msgps.c
        ipp-source-use/ch5/omp_msg/queue.c
        ipp-source-use/ch5/omp_msg/queue.h
        ipp-source-use/ch5/omp_msg/queue_lk.c
        ipp-source-use/ch5/omp_msg/queue_lk.h
        ipp-source-use/ch5/bubble.c
        ipp-source-use/ch5/mat_vect_mult.c
        ipp-source-use/ch5/odd_even.c
        ipp-source-use/ch5/omp_fibo.c
        ipp-source-use/ch5/omp_hello.c
        ipp-source-use/ch5/omp_hello_err_chk.c
        ipp-source-use/ch5/omp_mat_vect.c
        ipp-source-use/ch5/omp_mat_vect_rand_split.c
        ipp-source-use/ch5/omp_odd_even1.c
        ipp-source-use/ch5/omp_odd_even2.c
        ipp-source-use/ch5/omp_pi.c
        ipp-source-use/ch5/omp_private.c
        ipp-source-use/ch5/omp_sin_sum.c
        ipp-source-use/ch5/omp_tokenize.c
        ipp-source-use/ch5/omp_tokenize_r.c
        ipp-source-use/ch5/omp_trap1.c
        ipp-source-use/ch5/omp_trap2a.c
        ipp-source-use/ch5/omp_trap2b.c
        ipp-source-use/ch5/omp_trap3.c
        ipp-source-use/ch5/trap.c
        ipp-source-use/ch6/cyclic_derived.c
        ipp-source-use/ch6/frac.c
        ipp-source-use/ch6/frac.h
        ipp-source-use/ch6/mpi_nbody_basic.c
        ipp-source-use/ch6/mpi_nbody_red.c
        ipp-source-use/ch6/mpi_tsp_dyn.c
        ipp-source-use/ch6/mpi_tsp_stat.c
        ipp-source-use/ch6/nbody_basic.c
        ipp-source-use/ch6/nbody_red.c
        ipp-source-use/ch6/omp_nbody_basic.c
        ipp-source-use/ch6/omp_nbody_red.c
        ipp-source-use/ch6/omp_tsp_dyn.c
        ipp-source-use/ch6/omp_tsp_stat.c
        ipp-source-use/ch6/pth_nbody_basic.c
        ipp-source-use/ch6/pth_nbody_red.c
        ipp-source-use/ch6/pth_tsp_dyn.c
        ipp-source-use/ch6/pth_tsp_stat.c
        ipp-source-use/ch6/timer.h
        ipp-source-use/ch6/tsp_iter1.c
        ipp-source-use/ch6/tsp_iter2.c
        ipp-source-use/ch6/tsp_rec.c Assigment1/trap.c Assigment1/histo.c Assigment2/3.c Assigment2/3_1.c Assigment2/3_2.c Assigment2/contig.c Assigment3/Matrix_Mult.c)

add_executable(ParallelProgramming ${SOURCE_FILES})
add_executable(5_2 Assigment5/5_2.c)
set_target_properties(5_2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Assigment5/")